AUTOMAKE_OPTIONS = gnu

noinst_LTLIBRARIES = libmacshared.la

libmacshared_la_SOURCES = \
	GlobalFunctions.cpp \
	StdLibFileIO.cpp \
	CharacterHelper.cpp \
	CircleBuffer.cpp \
	CircleBuffer.h \
	MACUtils.h \
	MACUtils.cpp

pkginclude_HEADERS = \
	config.h \
	All.h \
	GlobalFunctions.h \
	ID3Genres.h \
	IO.h \
	SmartPtr.h \
	StdLibFileIO.h \
	NoWindows.h \
	CharacterHelper.h \
	MACUtils.h

EXTRA_DIST = \
	APEInfoDialog.cpp \
	APEInfoDialog.h \
	RollBuffer.h \
	StdString.h \
	Unicows.cpp \
	WAVInfoDialog.cpp \
	WAVInfoDialog.h \
	WinFileIO.cpp \
	WinFileIO.h
