AUTOMAKE_OPTIONS = gnu

noinst_LTLIBRARIES = libmacold.la

INCLUDES = -I$(top_srcdir)/src/Shared -I$(top_srcdir)/src/MACLib

libmacold_la_SOURCES = \
	APEDecompressCore.cpp \
	APEDecompressCore.h \
	APEDecompressOld.cpp \
	APEDecompressOld.h \
	Anti-Predictor.cpp \
	Anti-Predictor.h \
	AntiPredictorExtraHigh.cpp \
	AntiPredictorFast.cpp \
	AntiPredictorHigh.cpp \
	AntiPredictorNormal.cpp \
	UnBitArrayOld.cpp \
	UnBitArrayOld.h \
	UnMAC.cpp \
	UnMAC.h
